--- a/practica2.html
+++ b/practica2.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Practice2</title>
+        <title>Practica.v2</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
     </head>
+    <body>
+        <p>Vamos a hacer una lista de los equipos de futbol de la liga española de tal manera que conozcamos como quedo la clasificacion en el curso 2018-2019
+        </p>
+        <p><img src="/home/vant/Escritorio/Pagina Web/Imagenes/laliga.png" height="600" width="600"> </p>
+        <nav>
+            <ol>
+                <li>Athletic</li>
+                <li>Atletico</li>
+                <li>Barcelona</li>
+                <li>Real Madrid</li>
+                <li>Valencia</li>
+                <li>Villareal</li>
+                <li>Valladolid</li>
+                <li>Real Sociedad</li>
+                <li>Gatefe</li>
+                <li>Celta</li>
+                <li>Espanyol</li>
+                <li>Sevilla</li>
+                <li>Leganes</li>
+                <li>Rayo</li>
+                <li>Huesca</li>
+                <li>Levante</li>
+                <li>Betis</li>
+                <li>Alaves</li>
+                <li>Girona</li>
+                <li>Eibar</li>
+            </ol>
+        </nav>
+    </body>
 </html>
